# EmbodiedSceneAgent

./: .gitattributes  .gitignore  README.md  environment.yml  pyproject.toml
assets/: architecture_overview.md  pipeline_case_study.md
demos/: README.md
docs/: EmbodiedSceneAgent_3090_only_roadmap.docx  EmbodiedSceneAgent_Project_Blueprint_CheCheng.docx  agent_prompt_template.md  calvin_action_contract.md  calvin_adapter_plan.md  calvin_dataset_mapping_log.md  calvin_debug_alignment_audit.md  calvin_debug_alignment_stats.md  calvin_debug_dataset_audit.md  calvin_debug_real_data_stats.md  calvin_debug_same_task_subset.md  calvin_env_factory_usage.md  calvin_live_validation_plan.md  calvin_live_validation_results.md  calvin_official_setup_log.md  calvin_real_fields_audit.md  compute_plan.md  conda_environment_strategy.md  dataset_prep_log.md  dataset_strategy.md  development_roadmap.md  episode_log_schema.md  evidence_consistency_audit.md  experiment_matrix_v2.md  experiment_plan.md  failure_taxonomy.md  github_a100_readiness_audit.md  github_clone_simulation.md  limitations.md  model_selection_log.md  module_contracts.md  narrative_consistency_audit.md  narrative_consistency_checklist.md  planner_data_stats.md  planner_sft_data_spec.md  project_overview.md  replanner_design_v2.md  replanner_hybrid_results.md  repo_audit.md  repo_cleanup_audit.md  (+15 more)
examples/: README.md  calvin_env_factory.py.example  minimal_showcase_case.json
report/: main.tex  table_main_quant.tex  table_tiny_qual.tex
requirements/: base.txt  dev.txt
results/: rlbench_dev_smoke.json  (+1 more)
(+234 files in other folders)
