[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "embodied-scene-agent"
version = "0.1.0"
description = "3D-aware Vision-Language Planning for Long-Horizon Manipulation"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "EmbodiedSceneAgent Contributors" }]
dependencies = [
  "pydantic>=2.5",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.3",
]
train = [
  "torch>=2.2",
  "torchvision>=0.17.0",
  "transformers>=4.46.0",
  "peft>=0.13.0",
  "accelerate>=1.0.0",
  "datasets>=2.16.0",
  "pillow>=10.0",
  "safetensors>=0.4.0",
  "huggingface_hub>=0.24.0",
  "trl>=0.12.0",
  "qwen-vl-utils>=0.0.8",
  "pyyaml>=6.0",
]

[project.scripts]
esa-run-v0 = "embodied_scene_agent.cli.run_v0:main"
esa-run-calvin-dev = "embodied_scene_agent.cli.run_calvin_dev:main"
esa-run-calvin-minimal-loop = "embodied_scene_agent.cli.run_calvin_minimal_loop:main"
esa-run-calvin-live-probe = "embodied_scene_agent.cli.run_calvin_live_probe:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
